<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#ffcfe2 ">

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
            android:text="@string/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nick_tview" android:textSize="18sp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nick_edit_t" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/nick_tview"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:textSize="14sp"
            android:autofillHints=""/>
    <TextView
            android:text="@string/birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/birth_date_tview" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/nick_edit_t"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="0.0" android:textSize="18sp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/birth_date_tview" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.058" android:id="@+id/linearLayout2">

        <Spinner
                android:id="@+id/days_spinner"
                android:entries="@array/days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Spinner
                android:id="@+id/months_spinner"
                android:entries="@array/months"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Spinner
                android:id="@+id/years_spinner"
                android:entries="@array/years"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
    <TextView
            android:text="@string/what_are_you_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/what_look_textview" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.027" app:layout_constraintVertical_bias="0.0"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/what_look_textview" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.019"
            app:layout_constraintVertical_bias="0.0"/>
    <SeekBar
            style="@android:style/Widget.Material.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="70"
            android:progress="0"
            android:id="@+id/height_seek" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintVertical_bias="0.045"/>
    <TextView
            android:text="@string/default_seekbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5_height" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/what_look_textview" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.972"
            app:layout_constraintVertical_bias="0.08"/>
    <TextView
            android:text="@string/weight_seekbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weight_tview" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/height_seek" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.019"
            app:layout_constraintVertical_bias="0.053"/>
    <TextView
            android:text="@string/default_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8_weight" app:layout_constraintStart_toEndOf="@+id/weight_tview"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/height_seek" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintVertical_bias="0.12"/>
    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weight_seek"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/weight_tview"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="0.117" android:max="200"/>
    <TextView
            android:text="@string/race"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/race_textview" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/weight_seek" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="0.0" android:textSize="18sp"/>
    <Spinner
            android:layout_width="wrap_content"
            android:entries="@array/races"
            android:layout_height="wrap_content"
            android:id="@+id/bla_race_spinner_bla" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/race_textview"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/weight_seek"
            app:layout_constraintHorizontal_bias="0.805"
            app:layout_constraintVertical_bias="0.481"/>
    <Button
            android:background="?attr/selectableItemBackground"
            android:drawableEnd="@drawable/arrow_right_24_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/questionButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/race_textview" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" android:drawableRight="@drawable/arrow_right_24_icon"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>